Make unit tests module-aware.