@@ -63,12 +63,16 @@
                 <version>3.10.0</version>
                 <configuration>
                     <release>17</release>
+                    <testCompilerArgument>--add-modules=java.net.http</testCompilerArgument>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
+                <configuration>
+                    <argLine>--add-reads org.microhttp=java.net.http</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
